# clicks-editor

./: Cargo.toml
src/: actions.rs  app.rs  arrutil.rs  clip.rs  cueutils.rs  io.rs  main.rs
src/panel/: beatlist.rs  cliplist.rs  cuelist.rs  menubar.rs  mod.rs  properties.rs  timeline.rs  toolbar.rs
wix/: main.wxs
