[package]
name = "editor"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Karspexet/ClicKS"
authors = [ "Axel Stenberg" ]
description = "Configuration editor for the ClicKS digital metronome and timing suite"

[package.metadata.wix]
upgrade-guid = "023685F8-4662-49BF-8602-05A1696BDAD1"
path-guid = "141C754A-C595-4227-B545-3D5FCB2AF023"
license = false
eula = false

[dependencies]
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.142"
common = { git = "https://github.com/lexag/clicks-common.git", branch = "dev", features = [ "std", "serde", "postcard", "json" ] }
eframe = { version = "0.32.0", features = [ "persistence" ] }
egui = { version = "0.32.0", features = [ "persistence" ] }
rfd = "0.15.4"
egui_extras = { version = "0.32.0", features = [ "all_loaders" ] } 
egui_material_icons = "0.4.0"
hound = "3.5.1"
open = "5.3.2"
postcard = { version = "1.1.3", features = ["use-std"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
